antlr4visitor/cmmParser.cpp

// Generated from cmm.g4 by ANTLR 4.7.1


#include "cmmVisitor.h"

#include "cmmParser.h"


using namespace antlrcpp;
using namespace antlr4;

cmmParser::cmmParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

cmmParser::~cmmParser() {
  delete _interpreter;
}

std::string cmmParser::getGrammarFileName() const {
  return "cmm.g4";
}

const std::vector<std::string>& cmmParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& cmmParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- FileContext ------------------------------------------------------------------

cmmParser::FileContext::FileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t cmmParser::FileContext::getRuleIndex() const {
  return cmmParser::RuleFile;
}

void cmmParser::FileContext::copyFrom(FileContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ProgRuleContext ------------------------------------------------------------------

std::vector<cmmParser::FctDefinitionContext *> cmmParser::ProgRuleContext::fctDefinition() {
  return getRuleContexts<cmmParser::FctDefinitionContext>();
}

cmmParser::FctDefinitionContext* cmmParser::ProgRuleContext::fctDefinition(size_t i) {
  return getRuleContext<cmmParser::FctDefinitionContext>(i);
}

std::vector<cmmParser::FctDeclarationContext *> cmmParser::ProgRuleContext::fctDeclaration() {
  return getRuleContexts<cmmParser::FctDeclarationContext>();
}

cmmParser::FctDeclarationContext* cmmParser::ProgRuleContext::fctDeclaration(size_t i) {
  return getRuleContext<cmmParser::FctDeclarationContext>(i);
}

std::vector<cmmParser::DefinitionContext *> cmmParser::ProgRuleContext::definition() {
  return getRuleContexts<cmmParser::DefinitionContext>();
}

cmmParser::DefinitionContext* cmmParser::ProgRuleContext::definition(size_t i) {
  return getRuleContext<cmmParser::DefinitionContext>(i);
}

cmmParser::ProgRuleContext::ProgRuleContext(FileContext *ctx) { copyFrom(ctx); }

antlrcpp::Any cmmParser::ProgRuleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<cmmVisitor*>(visitor))
    return parserVisitor->visitProgRule(this);
  else
    return visitor->visitChildren(this);
}
cmmParser::FileContext* cmmParser::file() {
  FileContext *_localctx = _tracker.createInstance<FileContext>(_ctx, getState());
  enterRule(_localctx, 0, cmmParser::RuleFile);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    _localctx = dynamic_cast<FileContext *>(_tracker.createInstance<cmmParser::ProgRuleContext>(_localctx));
    enterOuterAlt(_localctx, 1);
    setState(37);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << cmmParser::Char)
      | (1ULL << cmmParser::Int32_t)
      | (1ULL << cmmParser::Int64_t)
      | (1ULL << cmmParser::Void))) != 0)) {
      setState(35);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
      case 1: {
        setState(32);
        fctDefinition();
        break;
      }

      case 2: {
        setState(33);
        fctDeclaration();
        break;
      }

      case 3: {
        setState(34);
        definition();
        break;
      }

      }
      setState(39);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DefinitionContext ------------------------------------------------------------------

cmmParser::DefinitionContext::DefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t cmmParser::DefinitionContext::getRuleIndex() const {
  return cmmParser::RuleDefinition;
}

void cmmParser::DefinitionContext::copyFrom(DefinitionContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- DefRuleContext ------------------------------------------------------------------

cmmParser::TypeContext* cmmParser::DefRuleContext::type() {
  return getRuleContext<cmmParser::TypeContext>(0);
}

std::vector<tree::TerminalNode *> cmmParser::DefRuleContext::VarName() {
  return getTokens(cmmParser::VarName);
}

tree::TerminalNode* cmmParser::DefRuleContext::VarName(size_t i) {
  return getToken(cmmParser::VarName, i);
}

tree::TerminalNode* cmmParser::DefRuleContext::Semi() {
  return getToken(cmmParser::Semi, 0);
}

std::vector<cmmParser::ArrayDefContext *> cmmParser::DefRuleContext::arrayDef() {
  return getRuleContexts<cmmParser::ArrayDefContext>();
}

cmmParser::ArrayDefContext* cmmParser::DefRuleContext::arrayDef(size_t i) {
  return getRuleContext<cmmParser::ArrayDefContext>(i);
}

std::vector<cmmParser::ArrayDeclContext *> cmmParser::DefRuleContext::arrayDecl() {
  return getRuleContexts<cmmParser::ArrayDeclContext>();
}

cmmParser::ArrayDeclContext* cmmParser::DefRuleContext::arrayDecl(size_t i) {
  return getRuleContext<cmmParser::ArrayDeclContext>(i);
}

std::vector<tree::TerminalNode *> cmmParser::DefRuleContext::Assign() {
  return getTokens(cmmParser::Assign);
}

tree::TerminalNode* cmmParser::DefRuleContext::Assign(size_t i) {
  return getToken(cmmParser::Assign, i);
}

std::vector<cmmParser::ExprContext *> cmmParser::DefRuleContext::expr() {
  return getRuleContexts<cmmParser::ExprContext>();
}

cmmParser::ExprContext* cmmParser::DefRuleContext::expr(size_t i) {
  return getRuleContext<cmmParser::ExprContext>(i);
}

std::vector<tree::TerminalNode *> cmmParser::DefRuleContext::Comma() {
  return getTokens(cmmParser::Comma);
}

tree::TerminalNode* cmmParser::DefRuleContext::Comma(size_t i) {
  return getToken(cmmParser::Comma, i);
}

cmmParser::DefRuleContext::DefRuleContext(DefinitionContext *ctx) { copyFrom(ctx); }

antlrcpp::Any cmmParser::DefRuleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<cmmVisitor*>(visitor))
    return parserVisitor->visitDefRule(this);
  else
    return visitor->visitChildren(this);
}
cmmParser::DefinitionContext* cmmParser::definition() {
  DefinitionContext *_localctx = _tracker.createInstance<DefinitionContext>(_ctx, getState());
  enterRule(_localctx, 2, cmmParser::RuleDefinition);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    _localctx = dynamic_cast<DefinitionContext *>(_tracker.createInstance<cmmParser::DefRuleContext>(_localctx));
    enterOuterAlt(_localctx, 1);
    setState(40);
    type();
    setState(41);
    match(cmmParser::VarName);
    setState(44);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      setState(42);
      arrayDef();
      break;
    }

    case 2: {
      setState(43);
      arrayDecl();
      break;
    }

    }
    setState(48);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == cmmParser::Assign) {
      setState(46);
      match(cmmParser::Assign);
      setState(47);
      expr(0);
    }
    setState(62);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == cmmParser::Comma) {
      setState(50);
      match(cmmParser::Comma);
      setState(51);
      match(cmmParser::VarName);
      setState(54);
      _errHandler->sync(this);

      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
      case 1: {
        setState(52);
        arrayDef();
        break;
      }

      case 2: {
        setState(53);
        arrayDecl();
        break;
      }

      }
      setState(58);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == cmmParser::Assign) {
        setState(56);
        match(cmmParser::Assign);
        setState(57);
        expr(0);
      }
      setState(64);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(65);
    match(cmmParser::Semi);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DefinitionAttributsContext ------------------------------------------------------------------

cmmParser::DefinitionAttributsContext::DefinitionAttributsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t cmmParser::DefinitionAttributsContext::getRuleIndex() const {
  return cmmParser::RuleDefinitionAttributs;
}

void cmmParser::DefinitionAttributsContext::copyFrom(DefinitionAttributsContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- DefAttributesContext ------------------------------------------------------------------

cmmParser::TypeContext* cmmParser::DefAttributesContext::type() {
  return getRuleContext<cmmParser::TypeContext>(0);
}

tree::TerminalNode* cmmParser::DefAttributesContext::VarName() {
  return getToken(cmmParser::VarName, 0);
}

tree::TerminalNode* cmmParser::DefAttributesContext::LeftBracket() {
  return getToken(cmmParser::LeftBracket, 0);
}

tree::TerminalNode* cmmParser::DefAttributesContext::RightBracket() {
  return getToken(cmmParser::RightBracket, 0);
}

tree::TerminalNode* cmmParser::DefAttributesContext::Value() {
  return getToken(cmmParser::Value, 0);
}

cmmParser::DefAttributesContext::DefAttributesContext(DefinitionAttributsContext *ctx) { copyFrom(ctx); }

antlrcpp::Any cmmParser::DefAttributesContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<cmmVisitor*>(visitor))
    return parserVisitor->visitDefAttributes(this);
  else
    return visitor->visitChildren(this);
}
cmmParser::DefinitionAttributsContext* cmmParser::definitionAttributs() {
  DefinitionAttributsContext *_localctx = _tracker.createInstance<DefinitionAttributsContext>(_ctx, getState());
  enterRule(_localctx, 4, cmmParser::RuleDefinitionAttributs);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    _localctx = dynamic_cast<DefinitionAttributsContext *>(_tracker.createInstance<cmmParser::DefAttributesContext>(_localctx));
    enterOuterAlt(_localctx, 1);
    setState(67);
    type();
    setState(68);
    match(cmmParser::VarName);
    setState(74);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == cmmParser::LeftBracket) {
      setState(69);
      match(cmmParser::LeftBracket);
      setState(71);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == cmmParser::Value) {
        setState(70);
        match(cmmParser::Value);
      }
      setState(73);
      match(cmmParser::RightBracket);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

cmmParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t cmmParser::TypeContext::getRuleIndex() const {
  return cmmParser::RuleType;
}

void cmmParser::TypeContext::copyFrom(TypeContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- TypeRuleContext ------------------------------------------------------------------

tree::TerminalNode* cmmParser::TypeRuleContext::Char() {
  return getToken(cmmParser::Char, 0);
}

tree::TerminalNode* cmmParser::TypeRuleContext::Int32_t() {
  return getToken(cmmParser::Int32_t, 0);
}

tree::TerminalNode* cmmParser::TypeRuleContext::Int64_t() {
  return getToken(cmmParser::Int64_t, 0);
}

cmmParser::TypeRuleContext::TypeRuleContext(TypeContext *ctx) { copyFrom(ctx); }

antlrcpp::Any cmmParser::TypeRuleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<cmmVisitor*>(visitor))
    return parserVisitor->visitTypeRule(this);
  else
    return visitor->visitChildren(this);
}
cmmParser::TypeContext* cmmParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 6, cmmParser::RuleType);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    _localctx = dynamic_cast<TypeContext *>(_tracker.createInstance<cmmParser::TypeRuleContext>(_localctx));
    enterOuterAlt(_localctx, 1);
    setState(76);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << cmmParser::Char)
      | (1ULL << cmmParser::Int32_t)
      | (1ULL << cmmParser::Int64_t))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArrayDefContext ------------------------------------------------------------------

cmmParser::ArrayDefContext::ArrayDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t cmmParser::ArrayDefContext::getRuleIndex() const {
  return cmmParser::RuleArrayDef;
}

void cmmParser::ArrayDefContext::copyFrom(ArrayDefContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ArrayDefinitionContext ------------------------------------------------------------------

tree::TerminalNode* cmmParser::ArrayDefinitionContext::LeftBracket() {
  return getToken(cmmParser::LeftBracket, 0);
}

tree::TerminalNode* cmmParser::ArrayDefinitionContext::RightBracket() {
  return getToken(cmmParser::RightBracket, 0);
}

tree::TerminalNode* cmmParser::ArrayDefinitionContext::Assign() {
  return getToken(cmmParser::Assign, 0);
}

tree::TerminalNode* cmmParser::ArrayDefinitionContext::LeftBrace() {
  return getToken(cmmParser::LeftBrace, 0);
}

tree::TerminalNode* cmmParser::ArrayDefinitionContext::RightBrace() {
  return getToken(cmmParser::RightBrace, 0);
}

tree::TerminalNode* cmmParser::ArrayDefinitionContext::Value() {
  return getToken(cmmParser::Value, 0);
}

cmmParser::ExprListContext* cmmParser::ArrayDefinitionContext::exprList() {
  return getRuleContext<cmmParser::ExprListContext>(0);
}

cmmParser::ArrayDefinitionContext::ArrayDefinitionContext(ArrayDefContext *ctx) { copyFrom(ctx); }

antlrcpp::Any cmmParser::ArrayDefinitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<cmmVisitor*>(visitor))
    return parserVisitor->visitArrayDefinition(this);
  else
    return visitor->visitChildren(this);
}
cmmParser::ArrayDefContext* cmmParser::arrayDef() {
  ArrayDefContext *_localctx = _tracker.createInstance<ArrayDefContext>(_ctx, getState());
  enterRule(_localctx, 8, cmmParser::RuleArrayDef);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    _localctx = dynamic_cast<ArrayDefContext *>(_tracker.createInstance<cmmParser::ArrayDefinitionContext>(_localctx));
    enterOuterAlt(_localctx, 1);
    setState(78);
    match(cmmParser::LeftBracket);
    setState(80);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == cmmParser::Value) {
      setState(79);
      match(cmmParser::Value);
    }
    setState(82);
    match(cmmParser::RightBracket);

    setState(83);
    match(cmmParser::Assign);
    setState(84);
    match(cmmParser::LeftBrace);
    setState(86);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << cmmParser::LeftParen)
      | (1ULL << cmmParser::PlusPlus)
      | (1ULL << cmmParser::Minus)
      | (1ULL << cmmParser::MinusMinus)
      | (1ULL << cmmParser::Not)
      | (1ULL << cmmParser::Character)
      | (1ULL << cmmParser::VarName)
      | (1ULL << cmmParser::Value))) != 0)) {
      setState(85);
      exprList();
    }
    setState(88);
    match(cmmParser::RightBrace);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArrayDeclContext ------------------------------------------------------------------

cmmParser::ArrayDeclContext::ArrayDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t cmmParser::ArrayDeclContext::getRuleIndex() const {
  return cmmParser::RuleArrayDecl;
}

void cmmParser::ArrayDeclContext::copyFrom(ArrayDeclContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ArrayDeclarationContext ------------------------------------------------------------------

tree::TerminalNode* cmmParser::ArrayDeclarationContext::LeftBracket() {
  return getToken(cmmParser::LeftBracket, 0);
}

tree::TerminalNode* cmmParser::ArrayDeclarationContext::Value() {
  return getToken(cmmParser::Value, 0);
}

tree::TerminalNode* cmmParser::ArrayDeclarationContext::RightBracket() {
  return getToken(cmmParser::RightBracket, 0);
}

cmmParser::ArrayDeclarationContext::ArrayDeclarationContext(ArrayDeclContext *ctx) { copyFrom(ctx); }

antlrcpp::Any cmmParser::ArrayDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<cmmVisitor*>(visitor))
    return parserVisitor->visitArrayDeclaration(this);
  else
    return visitor->visitChildren(this);
}
cmmParser::ArrayDeclContext* cmmParser::arrayDecl() {
  ArrayDeclContext *_localctx = _tracker.createInstance<ArrayDeclContext>(_ctx, getState());
  enterRule(_localctx, 10, cmmParser::RuleArrayDecl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    _localctx = dynamic_cast<ArrayDeclContext *>(_tracker.createInstance<cmmParser::ArrayDeclarationContext>(_localctx));
    enterOuterAlt(_localctx, 1);
    setState(90);
    match(cmmParser::LeftBracket);
    setState(91);
    match(cmmParser::Value);
    setState(92);
    match(cmmParser::RightBracket);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

cmmParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t cmmParser::BlockContext::getRuleIndex() const {
  return cmmParser::RuleBlock;
}

void cmmParser::BlockContext::copyFrom(BlockContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- BlockZoneContext ------------------------------------------------------------------

tree::TerminalNode* cmmParser::BlockZoneContext::LeftBrace() {
  return getToken(cmmParser::LeftBrace, 0);
}

tree::TerminalNode* cmmParser::BlockZoneContext::RightBrace() {
  return getToken(cmmParser::RightBrace, 0);
}

std::vector<cmmParser::StatementContext *> cmmParser::BlockZoneContext::statement() {
  return getRuleContexts<cmmParser::StatementContext>();
}

cmmParser::StatementContext* cmmParser::BlockZoneContext::statement(size_t i) {
  return getRuleContext<cmmParser::StatementContext>(i);
}

cmmParser::BlockZoneContext::BlockZoneContext(BlockContext *ctx) { copyFrom(ctx); }

antlrcpp::Any cmmParser::BlockZoneContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<cmmVisitor*>(visitor))
    return parserVisitor->visitBlockZone(this);
  else
    return visitor->visitChildren(this);
}
cmmParser::BlockContext* cmmParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 12, cmmParser::RuleBlock);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    _localctx = dynamic_cast<BlockContext *>(_tracker.createInstance<cmmParser::BlockZoneContext>(_localctx));
    enterOuterAlt(_localctx, 1);
    setState(94);
    match(cmmParser::LeftBrace);
    setState(98);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << cmmParser::While)
      | (1ULL << cmmParser::If)
      | (1ULL << cmmParser::Return)
      | (1ULL << cmmParser::LeftParen)
      | (1ULL << cmmParser::LeftBrace)
      | (1ULL << cmmParser::PlusPlus)
      | (1ULL << cmmParser::Minus)
      | (1ULL << cmmParser::MinusMinus)
      | (1ULL << cmmParser::Not)
      | (1ULL << cmmParser::Character)
      | (1ULL << cmmParser::VarName)
      | (1ULL << cmmParser::Value))) != 0)) {
      setState(95);
      statement();
      setState(100);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(101);
    match(cmmParser::RightBrace);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BraceContext ------------------------------------------------------------------

cmmParser::BraceContext::BraceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t cmmParser::BraceContext::getRuleIndex() const {
  return cmmParser::RuleBrace;
}

void cmmParser::BraceContext::copyFrom(BraceContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- BraceZoneContext ------------------------------------------------------------------

tree::TerminalNode* cmmParser::BraceZoneContext::LeftParen() {
  return getToken(cmmParser::LeftParen, 0);
}

cmmParser::ExprListContext* cmmParser::BraceZoneContext::exprList() {
  return getRuleContext<cmmParser::ExprListContext>(0);
}

tree::TerminalNode* cmmParser::BraceZoneContext::RightParen() {
  return getToken(cmmParser::RightParen, 0);
}

cmmParser::BraceZoneContext::BraceZoneContext(BraceContext *ctx) { copyFrom(ctx); }

antlrcpp::Any cmmParser::BraceZoneContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<cmmVisitor*>(visitor))
    return parserVisitor->visitBraceZone(this);
  else
    return visitor->visitChildren(this);
}
cmmParser::BraceContext* cmmParser::brace() {
  BraceContext *_localctx = _tracker.createInstance<BraceContext>(_ctx, getState());
  enterRule(_localctx, 14, cmmParser::RuleBrace);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    _localctx = dynamic_cast<BraceContext *>(_tracker.createInstance<cmmParser::BraceZoneContext>(_localctx));
    enterOuterAlt(_localctx, 1);
    setState(103);
    match(cmmParser::LeftParen);
    setState(104);
    exprList();
    setState(105);
    match(cmmParser::RightParen);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FctBlockContext ------------------------------------------------------------------

cmmParser::FctBlockContext::FctBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t cmmParser::FctBlockContext::getRuleIndex() const {
  return cmmParser::RuleFctBlock;
}

void cmmParser::FctBlockContext::copyFrom(FctBlockContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- FunctionBlockContext ------------------------------------------------------------------

tree::TerminalNode* cmmParser::FunctionBlockContext::LeftBrace() {
  return getToken(cmmParser::LeftBrace, 0);
}

tree::TerminalNode* cmmParser::FunctionBlockContext::RightBrace() {
  return getToken(cmmParser::RightBrace, 0);
}

std::vector<cmmParser::DefinitionContext *> cmmParser::FunctionBlockContext::definition() {
  return getRuleContexts<cmmParser::DefinitionContext>();
}

cmmParser::DefinitionContext* cmmParser::FunctionBlockContext::definition(size_t i) {
  return getRuleContext<cmmParser::DefinitionContext>(i);
}

std::vector<cmmParser::ArrayDeclContext *> cmmParser::FunctionBlockContext::arrayDecl() {
  return getRuleContexts<cmmParser::ArrayDeclContext>();
}

cmmParser::ArrayDeclContext* cmmParser::FunctionBlockContext::arrayDecl(size_t i) {
  return getRuleContext<cmmParser::ArrayDeclContext>(i);
}

std::vector<cmmParser::ArrayDefContext *> cmmParser::FunctionBlockContext::arrayDef() {
  return getRuleContexts<cmmParser::ArrayDefContext>();
}

cmmParser::ArrayDefContext* cmmParser::FunctionBlockContext::arrayDef(size_t i) {
  return getRuleContext<cmmParser::ArrayDefContext>(i);
}

std::vector<cmmParser::StatementContext *> cmmParser::FunctionBlockContext::statement() {
  return getRuleContexts<cmmParser::StatementContext>();
}

cmmParser::StatementContext* cmmParser::FunctionBlockContext::statement(size_t i) {
  return getRuleContext<cmmParser::StatementContext>(i);
}

cmmParser::FunctionBlockContext::FunctionBlockContext(FctBlockContext *ctx) { copyFrom(ctx); }

antlrcpp::Any cmmParser::FunctionBlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<cmmVisitor*>(visitor))
    return parserVisitor->visitFunctionBlock(this);
  else
    return visitor->visitChildren(this);
}
cmmParser::FctBlockContext* cmmParser::fctBlock() {
  FctBlockContext *_localctx = _tracker.createInstance<FctBlockContext>(_ctx, getState());
  enterRule(_localctx, 16, cmmParser::RuleFctBlock);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    _localctx = dynamic_cast<FctBlockContext *>(_tracker.createInstance<cmmParser::FunctionBlockContext>(_localctx));
    enterOuterAlt(_localctx, 1);
    setState(107);
    match(cmmParser::LeftBrace);
    setState(113);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << cmmParser::Char)
      | (1ULL << cmmParser::Int32_t)
      | (1ULL << cmmParser::Int64_t)
      | (1ULL << cmmParser::LeftBracket))) != 0)) {
      setState(111);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx)) {
      case 1: {
        setState(108);
        definition();
        break;
      }

      case 2: {
        setState(109);
        arrayDecl();
        break;
      }

      case 3: {
        setState(110);
        arrayDef();
        break;
      }
